<resources>
    <string name="app_name">RDSO HMS</string>
    <string name="title_activity_tab_task">TabTask</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="registration_form">Registration Form</string>
    <string name="patient_id">Patient ID</string>
    <string name="pid">Give an ID</string>
    <string name="pname">Patient\'s Name</string>
    <string name="doctordetail">Add Doctor</string>
    <string name="doctor_id">Doctor ID</string>
    <string name="did">Enter ID</string>
    <string name="doctor_s_name">Doctor\'s Name</string>
    <string name="age">Age</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="enter_age">Enter Age</string>
    <string name="new_receptionist_entry">New Receptionist Entry</string>
    <string name="receptionist_s_id">Receptionist\'s ID</string>
    <string name="recName">Name</string>
    <string name="delmsg">Do you really want to  the details?</string>

    <array name="maritalstatus">
        <item>Select Status</item>
        <item>Single</item>
        <item>Married</item>
        <item>Divorcee</item>
        <item>Widow</item>
    </array>

</resources>
